在Java中，字符串常量池里存放的是地址还是真实的字符串数据呢？